
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
                            xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
<modelVersion>4.0.0</modelVersion>
<packaging>pom</packaging>
    
    <groupId>com.javax0.geci</groupId>
    <artifactId>javageci-parent</artifactId>
    <version>1.2.0-SNAPSHOT</version>

    <name>javageci-parent</name>
    <description>Java GEnerate Code Inline source code generation framework</description>
    <modules>
<module>javageci-engine</module>
<module>javageci-api</module>
<module>javageci-tools</module>
<module>javageci-core</module>
<module>javageci-annotation</module>
<module>javageci-examples</module>
<module>javageci-jamal</module>
<module>javageci-docugen</module>
</modules>
    <licenses>
<license>
    <name>The Apache License, Version 2.0</name>
    <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
</license>
</licenses>
       <developers>
                                         <developer>
                                             <name>Peter Verhas</name>
                                             <email>peter@verhas.com</email>
                                         </developer>
                                     </developers>
        <scm>
                                             <connection>scm:git:git://github.com/verhas/javageci.git</connection>
                                             <developerConnection>scm:git:ssh://github.com/verhas/javageci.git</developerConnection>
                                             <url>https:/github.com/verhas/javageci/tree/master</url>
                                         </scm>
                                         <url>https:/github.com/verhas/javageci/tree/master</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build><pluginManagement><plugins>
                <plugin>
                    
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-surefire-plugin</artifactId>
    <version>3.0.0-M3</version>

                    <configuration>
                    
                    
                    
                        <argLine>
                            --add-opens geci.api/javax0.geci.api=ALL-UNNAMED
                            --add-opens geci.tools/javax0.geci.tools=ALL-UNNAMED
                            --add-opens geci.tools/javax0.geci.tools.syntax=ALL-UNNAMED
                            --add-opens geci.tools/javax0.geci.tools.reflection=ALL-UNNAMED
                            --add-opens geci.tools/javax0.geci.javacomparator=ALL-UNNAMED
                            --add-opens geci.tools/javax0.geci.javacomparator.lex=ALL-UNNAMED
                            --add-opens geci.engine/javax0.geci.util=ALL-UNNAMED
                            --add-opens geci.engine/javax0.geci.toolsgen=ALL-UNNAMED
                            --add-opens geci.engine/javax0.geci.engine=ALL-UNNAMED
                            --add-opens geci.core/javax0.geci.fluent.syntax=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tutorials.simple=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tutorials.hello=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tutorials.hello=geci.tools
                            --add-opens geci.examples/javax0.geci.tests.templated=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.repeated=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.mapper=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.builder=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.buildfluent=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.consistency=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.builder=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.cloner=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.tests.configBuilder=ALL-UNNAMED
                            --add-exports geci.examples/javax0.geci.tutorials.simple=geci.core
                            --add-exports geci.examples/javax0.geci.tests.fluent=geci.tools
                            --add-exports geci.examples/javax0.geci.tests.fluent=geci.core
                            --add-exports geci.examples/javax0.geci.buildfluent=geci.core
                            --add-exports geci.examples/javax0.geci.buildfluent=geci.core
                            --add-opens geci.examples/javax0.geci.jamal=ALL-UNNAMED
                            --add-opens geci.examples/javax0.geci.jamal.util=ALL-UNNAMED
                            --add-exports geci.examples/javax0.geci.jamal.reflection=ALL-UNNAMED
                        </argLine>
                    </configuration>
                    <dependencies>
                        
<dependency>
    <groupId>org.junit.jupiter</groupId>
    <artifactId>junit-jupiter-engine</artifactId>
    <version>5.5.1</version>
</dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-source-plugin</artifactId>
    <version>3.0.1</version>

                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-javadoc-plugin</artifactId>
    <version>3.1.0</version>

                    <configuration>
                        <detectLinks>false</detectLinks>
                    </configuration>
                    <dependencies>
<dependency>
    <groupId>org.ow2.asm</groupId>
    <artifactId>asm</artifactId>
    <version>7.0</version>
</dependency></dependencies>
                    <executions><execution>
                            <id>attach-javadocs</id>
                            <goals><goal>jar</goal></goals></execution></executions>
                </plugin>
                <plugin>
                    
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-compiler-plugin</artifactId>
    <version>3.8.0</version>

                    <configuration>
                        <release>8</release>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <dependencyManagement><dependencies>
        
<dependency>
    <groupId>com.javax0.geci</groupId>
    <artifactId>javageci-api</artifactId>
    <version>1.2.0-SNAPSHOT</version>
</dependency>
<dependency>
    <groupId>com.javax0.geci</groupId>
    <artifactId>javageci-core</artifactId>
    <version>1.2.0-SNAPSHOT</version>
</dependency>
<dependency>
    <groupId>com.javax0.geci</groupId>
    <artifactId>javageci-tools</artifactId>
    <version>1.2.0-SNAPSHOT</version>
</dependency>
<dependency>
    <groupId>com.javax0.geci</groupId>
    <artifactId>javageci-engine</artifactId>
    <version>1.2.0-SNAPSHOT</version>
</dependency>
<dependency>
    <groupId>com.javax0.geci</groupId>
    <artifactId>javageci-annotation</artifactId>
    <version>1.2.0-SNAPSHOT</version>
</dependency>
<dependency>
    <groupId>com.javax0.geci</groupId>
    <artifactId>javageci-docugen</artifactId>
    <version>1.2.0-SNAPSHOT</version>
</dependency>
        
<dependency>
<groupId>org.junit.jupiter</groupId>
<artifactId>junit-jupiter-api</artifactId>
<version>5.5.1</version>
<scope>test</scope>
</dependency>
<dependency>
<groupId>org.junit.jupiter</groupId>
<artifactId>junit-jupiter-engine</artifactId>
<version>5.5.1</version>
<scope>test</scope>
</dependency>
        </dependencies></dependencyManagement>
</project>

